@@ -52,7 +52,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2005/01/07 03:33:41 $}]
+          [::xotcl::rcs date {$Date: 2005/01/07 12:41:26 $}]
         </TD>
       </TR>
     </TABLE>
