@@ -1,4 +1,4 @@
-2004-01-07 Gustaf.Neumann@wu-wien.ac.at
+2005-01-07 Gustaf.Neumann@wu-wien.ac.at
         * code cleanup for nonpos args
         * new methods for Serialzer:
            - Serializer methodSerialize (to serialize methods)
@@ -6,9 +6,10 @@
              xotcl namespace via ::Serializer all
            - Serializer exportObjects (to export Objects from ::xotcl::*)
         * put Serializer into a namespace (::Serializer is auto-exported)
+        * fix for serializer, when xotcl is not imported globally
         * aolserver: support for namespaced objects in xotcl.tcl
 
-2004-01-06 Gustaf.Neumann@wu-wien.ac.at
+2005-01-06 Gustaf.Neumann@wu-wien.ac.at
         * made introspection options for methods with nonpos args
           compatible with tcl
         * adding functionality to allow nonpos args and positional args
